# ESP32S3-USB-Keyboard-To-BLE

./: .gitattributes  .gitignore  CMakeLists.txt  README.cn.md  README.md  sdkconfig.defaults
.github/workflows/: build-and-release.yml
docs/: index.html  manifest.json
main/: CMakeLists.txt  app_main.c  app_main.h  ble_hid_manager.c  ble_hid_manager.h  ble_hid_report.c  ble_hid_report.h  bridge.c  bridge.h  config.h  hid_device_le_prf.c  hid_host_driver.c  hid_types.h  hid_usage_keyboard.h  idf_component.yml  led_poll.c  led_poll.h  led_status.c  led_status.h  nvs_storage.c  nvs_storage.h  usb_host_manager.c  usb_host_manager.h
