idf_component_register(
    SRCS
        "app_main.c"
        "usb_host_manager.c"
        "hid_host_driver.c"
        "ble_hid_manager.c"
        "ble_hid_report.c"
        "bridge.c"
        "led_status.c"
        "nvs_storage.c"
        "esp_hidd_prf_api.c"
        "hid_dev.c"
        "hid_device_le_prf.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_driver_gpio
        nvs_flash
        bt
        led_strip
)
